--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^5.55.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
