--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-multi-carousel": "^2.8.5",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.2",
