--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
   "name": "pet-project",
-=======
-  "name": "performance-page",
->>>>>>> eunseon
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,22 +8,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "css-loader": "^7.1.2",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-<<<<<<< HEAD
+    "react-icons": "^5.3.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-multi-carousel": "^2.8.5",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.11",
-=======
-    "react-icons": "^5.3.0",
-    "react-kakao-maps-sdk": "^1.1.27",
-    "react-multi-carousel": "^2.8.5",
-    "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
->>>>>>> eunseon
+    "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,11 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-<<<<<<< HEAD
-=======
   },
   "devDependencies": {
     "tailwindcss": "^3.4.11"
->>>>>>> eunseon
   }
 }
